posts swagger
add posts swagger
